<resources>
    <string name="app_name">Burger application</string>
    <string name="menu">menu</string>
    <string name="bell">bell</string>
    <string name="every_bite_a">Every Bite a</string>
    <string name="better_burger">Better burger!</string>
    <string name="burger">Burger</string>
    <string name="go">go</string>
    <string name="let_s_fix_it" >Let\'s fix it!</string>
    <string name="are_you_hungry" >Are you hungry?</string>
    <string name="special_offers" >Special offers</string>
    <string name="back">back</string>
    <string name="total_price" >Total price</string>
    <string name="pizza" >Pizza</string>
    <string name="all_products" >All products</string>
    <string name="burger_image">burger Image</string>
    <string name="add_to_your_basket" >Go to basket</string>
    <string name="save" >Save</string>
    <string name="languages" >Languages</string>
    <string name="english" >English</string>
    <string name="russian">Russian</string>
    <string name="themes">Themes</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="set_it_up_as_you_like" >Set it up as you like</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="auth_error">Authorization error. Try again.</string>
    <string name="not_auth">You are not authorized.</string>
    <string name="your_basket">Your basket</string>
    <string name="order_your_best_lunch">Order your best lunch!</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="number_of_points">POINTS:</string>
    <string name="final_price">FINAL PRICE:</string>
    <string name="oops_no_internet_connection">Oops! No internet connection!</string>
    <string name="retry">Retry</string>
    <string name="close_app">Close app</string>
    <string name="still_no_internet">Still no internet</string>
    <string name ="response_error" >Response body is empty</string>
    <string name="user_name">User name:</string>
    <string name="number_of_your_points">Number of your points:</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="need_both">Please enter both login and password</string>
    <string name="payment_was_successful_await_your_order">Payment was successful, await your order!</string>
    <string name="order_error">Log in to pay for your order with points</string>
    <string name="price">Price:</string>
    <string name="total_price_one_added_product">Total price:</string>
    <string name="your_cart">Your cart</string>
    <string name="total_price_in_payment">Total price:</string>
    <string name="select_payment_method">Select payment method:</string>
    <string name="cash">Cash</string>
    <string name="bonus_points">Bonus points</string>
    <string name="accept_payment">Accept payment</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="offers_error">Error loading offers</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="display">0</string>
    <string name="still_loading">Still loading…</string>
    <string name="loading_error">Loading error</string>
</resources>