<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    android:id="@+id/internetCheckActivity">

    <TextView
        android:id="@+id/internetMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oops_no_internet_connection"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="40sp"
        android:textColor="?attr/colorOnPrimary"
        android:gravity="center" />

    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="30sp"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toBottomOf="@+id/internetMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/retry"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toBottomOf="@+id/internetMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/close_app"
        android:textSize="30sp"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>