<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:padding="12dp"
    android:id="@+id/paymentFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToCartFromPayment"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="@dimen/icon_button_size"
        android:layout_height="@dimen/icon_button_size"
        android:layout_marginBottom="@dimen/common_spacing"
        app:iconTint="?attr/colorOnPrimary"
        app:icon="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsOnPaymentProduct"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="@dimen/icon_button_size"
        android:layout_height="@dimen/icon_button_size"
        android:layout_marginBottom="@dimen/common_spacing"
        app:iconTint="?attr/colorOnPrimary"
        app:icon="@drawable/baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingBottom="80dp"
        android:textSize="40sp"
        android:textColor="?attr/colorOnPrimary"/>

        <TextView
            android:id="@+id/totalPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_in_payment"
            android:textSize="18sp"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintTop_toBottomOf="@+id/cartTitle"
            app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/totalPriceFromCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem[1]"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/totalPriceTitle"
        app:layout_constraintTop_toBottomOf="@id/cartTitle"/>

    <TextView
        android:id="@+id/chooseYourPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/select_payment_method"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/totalPriceTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/chooseYourPayment"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioCash"
            style="@style/Widget.App.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="true"
            android:text="@string/cash"
            android:textColor="?attr/colorOnPrimary" />

        <RadioButton
            android:id="@+id/radioBonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.App.RadioButton"
            android:checked="true"
            android:enabled="true"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/bonus_points" />

    </RadioGroup>

    <Button
        android:id="@+id/acceptPayment"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/accept_payment"
        android:textSize="20sp"
        android:textColor="?attr/colorOnPrimary"
        android:gravity="center"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>