<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basketFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:padding="12dp"
    tools:context=".ui.BasketFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="@dimen/icon_button_size"
        android:layout_height="@dimen/icon_button_size"
        android:layout_marginBottom="@dimen/common_spacing"
        app:icon="@drawable/baseline_settings_24"
        app:iconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/titleBasket"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:text="@string/your_basket"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings" />

    <TextView
        android:id="@+id/titleBasket2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/order_your_best_lunch"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBasket" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="titleBasket2" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="barrier2" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/burgerRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier3"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/one_added_product" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed_to_payment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>