<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuFragment"
    android:id="@+id/menuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="?attr/colorPrimary">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="@dimen/icon_button_size"
        android:layout_height="@dimen/icon_button_size"
        android:layout_marginBottom="@dimen/common_spacing"
        app:iconTint="?attr/colorOnPrimary"
        app:icon="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="@dimen/icon_button_size"
        android:layout_height="@dimen/icon_button_size"
        android:layout_marginBottom="@dimen/common_spacing"
        app:iconTint="?attr/colorOnPrimary"
        app:icon="@drawable/baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:text="@string/every_bite_a"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/better_burger"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="title2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/burgers"
        style="@style/Widget.AppTheme.IconButton"
        app:layout_goneMarginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:textSize="11sp"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/burger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pizza"
        style="@style/Widget.AppTheme.IconButton"
        app:layout_goneMarginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:textSize="11sp"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/pizza"
        app:layout_constraintStart_toEndOf="@id/burgers"
        app:layout_constraintTop_toTopOf="@id/barrier2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/all"
        style="@style/Widget.AppTheme.IconButton"
        app:layout_goneMarginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:textSize="11sp"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/all_products"
        app:layout_constraintStart_toEndOf="@id/pizza"
        app:layout_constraintTop_toTopOf="@id/barrier2" />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="burgers,pizza" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/burgerRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/barrier3"
        app:layout_constraintBottom_toTopOf="@+id/tools"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_burger" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:background="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bank"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/piggy_bank"
            app:iconTint="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp" />

        <FrameLayout
            android:id="@+id/basketContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/basketIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_shopping_basket_24"
                app:tint="?attr/colorOnPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/basket"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:iconTint="?attr/colorOnPrimary" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bell"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            app:iconTint ="?attr/colorOnPrimary"
            app:icon="@drawable/bell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>