<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginAndPasswordFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToMenuFromLogin"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="@dimen/icon_button_size"
        android:layout_height="@dimen/icon_button_size"
        android:layout_marginBottom="@dimen/common_spacing"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconTint="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="?attr/colorPrimaryVariant"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleTint="?attr/colorOnPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/login"
                    android:textColor="?attr/colorOnPrimary"
                    android:textColorHint="?attr/colorOnPrimary" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="?attr/colorPrimaryVariant"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="?attr/colorOnPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="?attr/colorOnPrimary" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>


        <Button
            android:id="@+id/sign_in_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:backgroundTint="#FFD700"
            app:cornerRadius="10dp"
            app:strokeColor="?attr/colorOnPrimary"
            app:strokeWidth="2dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>